# hft-tracker

./: README.md
project/: CMakeLists.txt  README.md  requirements.txt
project/config/: config.example.yaml
project/src/cpp/common/: CMakeLists.txt
project/src/cpp/event_pipeline/: CMakeLists.txt
project/src/cpp/execution/: CMakeLists.txt
project/src/cpp/market_data/: CMakeLists.txt
project/src/cpp/network/: CMakeLists.txt
project/src/cpp/order_book/: CMakeLists.txt
project/src/python/common/: __init__.py
project/src/python/monitoring/: __init__.py
project/src/python/risk_engine/: __init__.py
project/src/python/smart_order_router/: __init__.py
project/src/python/strategies/: __init__.py
project/tests/python/: __init__.py
